Bug 786114 - Backout d178a49c979c (bug 785608 part 8) for regressing |with| handling.  r=luke, a=lsblakk.